fix errors and convert whole plugin to maven